# GEN_AI

./: main.py  pyproject.toml
01-fast-api/: 4_custom_ecexption.py  5_file_handling.py
02-data-base/: .env.example  fastapi_pymongo.py
